Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123928

Not all widgets follow mode switching at runtime in the Widget Gallery example

    XMLWordPrintable

Details

    • Windows
    • 7d7d843a3 (dev), 2141c7998 (6.7), a59d60d4f (6.7.1)

    Description

      Steps to reproduce:

      • Build and run the Widget Gallery example from 6.7.0 with MinGW on Windows 11
      • All widgets look OK when it starts
      • Go to Windows Settings and switch to another mode, i.e. form current "Dark" to "Light" or other way around
      • Most widgets in the Widget Gallery follow the switch, some did not switch the background as it seems
      • This happens with all styles on the list, but "windowsvista" where the dark mode is not supported at all.

      See the screenshots.

      Attachments

        For Gerrit Dashboard: QTBUG-123928
        # Subject Branch Project Status CR V

        Activity

          People

            wladimir.leuschner Wladimir Leuschner
            vminenko Vladimir Minenko
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes